--- a/GB_Python_Django-master/server/main/static/main/css/index.css
+++ b/GB_Python_Django-master/server/main/static/main/css/index.css
@@ -1,3 +1,8 @@
+body {
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto", sans-serif;
+}
 .brends_main {
     height: 160px;
     background-color: #f8f8f8;
