--- a/GB_Python_Django-master/server/static/main/css/contacts.css
+++ b/GB_Python_Django-master/server/static/main/css/contacts.css
@@ -1,3 +1,8 @@
+body {
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto", sans-serif;
+}
 .contact_form textarea {
     width: 800px;
     height: 100px;
