--- a/GB_Python_Django-master/server/static/server/css/base.css
+++ b/GB_Python_Django-master/server/static/server/css/base.css
@@ -1,3 +1,8 @@
+body {
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto", sans-serif;
+}
 @font-face {
     font-family: "Raleway Black Italic";
     src: url(../fonts/Raleway-Black-Italic.ttf);
